paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/function_specifiers_c8a/sample_001/target.compile.log
error[E0277]: `main` has invalid return type `i32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/function_specifiers_c8a/sample_001/target.rs:9:14
  |
9 | fn main() -> i32 {
  |              ^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`

warning: unused variable: `v`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/function_specifiers_c8a/sample_001/target.rs:10:9
   |
10 |     let v = pick(0);
   |         ^ help: if this is intentional, prefix it with an underscore: `_v`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.